# flywheel

./: .dockerignore  .gitignore  AGENTS.md  BUILDING.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  SUPPORT.md  flywheel-0.1.0.tgz  flywheel-0.1.1.tgz  index.yaml
.enactr/: README.md
.enactr/flows/: bump.yaml  ci.yaml  main.yaml  release.yaml
.github/: pull_request_template.md
.github/workflows/: bump.yaml  ci.yaml  main.yaml  release.yaml
charts/flywheel/: .helmignore  Chart.yaml  README.md  values.schema.json  values.yaml
docs/: architecture.md  operations.md
docs/adr/: 0001-keep-recency-aware-eviction.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/plans/: parallel-cacheprog-prefetch.md
src/: cli.rs  clock.rs  config.rs  lib.rs  main.rs  manifest.rs  prefetch.rs  reference.rs  telemetry.rs
src/agent/: agent_test.rs  discovery.rs  discovery_test.rs  mod.rs  ring.rs  ring_test.rs
src/artifact/: identity.rs  metadata.rs  mod.rs
src/cache/: mod.rs  recent_use.rs  recent_use_test.rs  service.rs  space.rs  space_test.rs  stripes.rs
src/cacheprog/: cacheprog_test.rs  mod.rs  session.rs
src/channel/: identity.rs  mod.rs  policy.rs  registry.rs  service.rs  token.rs
src/proxy/: mod.rs  proxy_test.rs
src/storage/: mod.rs  records.rs  records_test.rs
src/transport/: mod.rs
tests/: build_cache.rs  domain.rs  local_artifacts.rs  package_proxies.rs
tests/integration/: agent.rs  build_cache.rs  channels.rs  cli.rs  domain.rs  local_artifacts.rs  maintenance.rs  (+1 more)
(+21 files in other folders)
