[package]
name = "flywheel"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.100"
async-compression = { version = "0.4.19", features = ["tokio", "zstd"] }
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["http1", "json", "macros", "tokio"] }
base64 = "0.22.1"
bytes = "1.11.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
dashmap = "6.1.0"
futures-util = "0.3.31"
hex = "0.4.3"
hickory-resolver = "0.26.1"
html-escape = "0.2.13"
http = "1.4.0"
http-body-util = "0.1.3"
lol_html = "3.0.0"
postcard = { version = "1.1.3", features = ["use-std"] }
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream", "zstd"] }
rocksdb = { version = "0.24.0", default-features = false, features = ["snappy"] }
rustix = { version = "1.0.7", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.17", features = ["io", "rt"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "json"] }
ulid = { version = "1.2.1", features = ["serde"] }
url = "2.5.7"

[dev-dependencies]
tempfile = "3.23.0"
